Add complete html structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
+  <title>Linked List</title>
 </head>
 <body>
-
+  <section>
+    <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo" height="20">List</h1>
+    <form>
+      <input class="" type="text" aria-label="" placeholder="Website Title">
+      <input class="" type="text" aria-label="" placeholder="Website URL">
+      <input class="" type="button" aria-label="" value="Enter">
+    </form>
+  </section>
+  <section>
+    <article>
+      <div>
+        <h2>The Website Title</h2>
+      </div>
+      <div>
+        <a href="">www.websiteurl.com</a>
+      </div>
+      <div>
+        <input class="" type="button" aria-label="" value="Read">
+        <input class="" type="button" aria-label="" value="Delete">
+      </div>
+    </article>
+    <article>
+      <div>
+        <h2>The Website Title</h2>
+      </div>
+      <div>
+        <a href="">www.websiteurl.com</a>
+      </div>
+      <div>
+        <input class="" type="button" aria-label="" value="Read">
+        <input class="" type="button" aria-label="" value="Delete">
+      </div>
+    </article>
+    <article>
+      <div>
+        <h2>The Website Title</h2>
+      </div>
+      <div>
+        <a href="">www.websiteurl.com</a>
+      </div>
+      <div>
+        <input class="" type="button" aria-label="" value="Read">
+        <input class="" type="button" aria-label="" value="Delete">
+      </div>
+    </article>
+    <article>
+      <div>
+        <h2>The Website Title</h2>
+      </div>
+      <div>
+        <a href="">www.websiteurl.com</a>
+      </div>
+      <div>
+        <input class="" type="button" aria-label="" value="Read">
+        <input class="" type="button" aria-label="" value="Delete">
+      </div>
+    </article>
+  </section>
 </body>
 </html>
