--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Linked List</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <section>
@@ -9,7 +10,7 @@
     <form>
       <input class="" type="text" aria-label="" placeholder="Website Title">
       <input class="" type="text" aria-label="" placeholder="Website URL">
-      <input class="" type="button" aria-label="" value="Enter">
+      <input class="enter-button" type="button" aria-label="" value="Enter">
     </form>
   </section>
   <section>
@@ -21,8 +22,8 @@
         <a href="">www.websiteurl.com</a>
       </div>
       <div>
-        <input class="" type="button" aria-label="" value="Read">
-        <input class="" type="button" aria-label="" value="Delete">
+        <input class="read-button" type="button" aria-label="" value="Read">
+        <input class="delete-button" type="button" aria-label="" value="Delete">
       </div>
     </article>
     <article>
@@ -33,8 +34,8 @@
         <a href="">www.websiteurl.com</a>
       </div>
       <div>
-        <input class="" type="button" aria-label="" value="Read">
-        <input class="" type="button" aria-label="" value="Delete">
+        <input class="read-button" type="button" aria-label="" value="Read">
+        <input class="delete-button" type="button" aria-label="" value="Delete">
       </div>
     </article>
     <article>
@@ -45,8 +46,8 @@
         <a href="">www.websiteurl.com</a>
       </div>
       <div>
-        <input class="" type="button" aria-label="" value="Read">
-        <input class="" type="button" aria-label="" value="Delete">
+        <input class="read-button" type="button" aria-label="" value="Read">
+        <input class="delete-button" type="button" aria-label="" value="Delete">
       </div>
     </article>
     <article>
@@ -57,10 +58,11 @@
         <a href="">www.websiteurl.com</a>
       </div>
       <div>
-        <input class="" type="button" aria-label="" value="Read">
-        <input class="" type="button" aria-label="" value="Delete">
+        <input class="read-button" type="button" aria-label="" value="Read">
+        <input class="delete-button" type="button" aria-label="" value="Delete">
       </div>
     </article>
   </section>
+  <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
