--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <section class="input-section">
     <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo"> List</h1>
     <form>
-      <input class="user-form" type="text" aria-label="" placeholder="Website Title">
-      <input class="user-form" type="text" aria-label="" placeholder="Website URL">
-      <input class="user-form enter-button" type="button" aria-label="" value="Enter">
+      <input class="user-form-input" type="text" aria-label="" placeholder="Website Title">
+      <input class="user-form-input" type="text" aria-label="" placeholder="Website URL">
+      <input class="user-form-input enter-button" type="button" aria-label="" value="Enter" disabled>
     </form>
   </section>
-  <section>
+  <section class="card-section">
     <article>
       <div>
         <h4>The Website Title</h4>
