--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
   <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, height=device-height,initial-scale=1">
 </head>
 <body>
   <section class="input-section">
     <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo"> List</h1>
-    <form>
-      <input class="user-form-input" type="text" aria-label="" placeholder="Website Title">
-      <input class="user-form-input" type="text" aria-label="" placeholder="Website URL">
-      <input class="user-form-input enter-button" type="button" aria-label="" value="Enter" disabled>
-    </form>
+    <input class="user-form-input" type="text" aria-label="" placeholder="Website Title">
+    <input class="user-form-input" type="text" aria-label="" placeholder="Website URL">
+    <input class="user-form-input enter-button" type="button" aria-label="" value="Enter" disabled>
   </section>
   <section class="card-section">
     <article>
