--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
   <title>Linked List</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 </head>
 <body>
-  <section>
-    <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo" height="20">List</h1>
+  <section class="input-section">
+    <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo"> List</h1>
     <form>
-      <input class="" type="text" aria-label="" placeholder="Website Title">
-      <input class="" type="text" aria-label="" placeholder="Website URL">
-      <input class="enter-button" type="button" aria-label="" value="Enter">
+      <input class="user-website-input user-form" type="text" aria-label="" placeholder="Website Title">
+      <input class="user-url-input user-form" type="url" aria-label="" placeholder="Website URL">
+      <input class="enter-button user-form" type="button" aria-label="" value="Enter" disabled="true">
     </form>
   </section>
+  <section class="display-bookmark-area">
+  </section>
   <section>
-    <article>
+  <!--   <article>
       <div>
-        <h2>The Website Title</h2>
+        <h4>The Website Title</h4>
       </div>
       <div>
         <a href="">www.websiteurl.com</a>
@@ -28,7 +31,7 @@
     </article>
     <article>
       <div>
-        <h2>The Website Title</h2>
+        <h4>The Website Title</h4>
       </div>
       <div>
         <a href="">www.websiteurl.com</a>
@@ -40,7 +43,7 @@
     </article>
     <article>
       <div>
-        <h2>The Website Title</h2>
+        <h4>The Website Title</h4>
       </div>
       <div>
         <a href="">www.websiteurl.com</a>
@@ -52,7 +55,7 @@
     </article>
     <article>
       <div>
-        <h2>The Website Title</h2>
+        <h4>The Website Title</h4>
       </div>
       <div>
         <a href="">www.websiteurl.com</a>
@@ -61,7 +64,7 @@
         <input class="read-button" type="button" aria-label="" value="Read">
         <input class="delete-button" type="button" aria-label="" value="Delete">
       </div>
-    </article>
+    </article> -->
   </section>
   <script type="text/javascript" src="script.js"></script>
 </body>
