Back to same page commit

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <section class="input-section">
     <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo"> List</h1>
-    <input class="user-form-input" type="text" aria-label="" placeholder="Website Title">
-    <input class="user-form-input" type="text" aria-label="" placeholder="Website URL">
-    <input class="user-form-input enter-button" type="button" aria-label="" value="Enter" disabled>
+    <form>
+      <input class="user-form-input user-website-input user-form" type="text" aria-label="" placeholder="Website Title">
+      <input class="user-form-input user-url-input user-form" type="text" aria-label="" placeholder="Website URL">
+      <input class="user-form-input user-form enter-button" type="button" aria-label="" value="Enter">
+    </form>
   </section>
-  <section class="card-section">
-    <article>
+  <section class="display-bookmark-area card-section">
+    <!-- <article>
       <div>
         <h4>The Website Title</h4>
       </div>
@@ -62,7 +64,7 @@
         <input class="read-button" type="button" aria-label="" value="Read">
         <input class="delete-button" type="button" aria-label="" value="Delete">
       </div>
-    </article>
+    </article> -->
   </section>
   <script type="text/javascript" src="script.js"></script>
 </body>
