--- a/index.html
+++ b/index.html
@@ -2,69 +2,21 @@
 <html lang="en">
 <head>
   <title>Linked List</title>
+  <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, height=device-height,initial-scale=1">
 </head>
 <body>
   <section class="input-section">
     <h1>Linked <img class="logo" src="images/linked-list-logo.svg" alt="Linked List Logo"> List</h1>
     <form>
-      <input class="user-website-input user-form" type="text" aria-label="" placeholder="Website Title">
-      <input class="user-url-input user-form" type="url" aria-label="" placeholder="Website URL">
-      <input class="enter-button user-form" type="button" aria-label="" value="Enter" disabled="true">
+      <input class="user-form-input user-website-input user-form" type="text" aria-label="" placeholder="Website Title">
+      <input class="user-form-input user-url-input user-form" type="text" aria-label="" placeholder="Website URL">
+      <input class="user-form-input user-form enter-button" type="button" aria-label="" value="Enter">
     </form>
   </section>
-  <section class="display-bookmark-area">
-  </section>
-  <section>
-  <!--   <article>
-      <div>
-        <h4>The Website Title</h4>
-      </div>
-      <div>
-        <a href="">www.websiteurl.com</a>
-      </div>
-      <div>
-        <input class="read-button" type="button" aria-label="" value="Read">
-        <input class="delete-button" type="button" aria-label="" value="Delete">
-      </div>
-    </article>
-    <article>
-      <div>
-        <h4>The Website Title</h4>
-      </div>
-      <div>
-        <a href="">www.websiteurl.com</a>
-      </div>
-      <div>
-        <input class="read-button" type="button" aria-label="" value="Read">
-        <input class="delete-button" type="button" aria-label="" value="Delete">
-      </div>
-    </article>
-    <article>
-      <div>
-        <h4>The Website Title</h4>
-      </div>
-      <div>
-        <a href="">www.websiteurl.com</a>
-      </div>
-      <div>
-        <input class="read-button" type="button" aria-label="" value="Read">
-        <input class="delete-button" type="button" aria-label="" value="Delete">
-      </div>
-    </article>
-    <article>
-      <div>
-        <h4>The Website Title</h4>
-      </div>
-      <div>
-        <a href="">www.websiteurl.com</a>
-      </div>
-      <div>
-        <input class="read-button" type="button" aria-label="" value="Read">
-        <input class="delete-button" type="button" aria-label="" value="Delete">
-      </div>
-    </article> -->
+  <section class="display-bookmark-area card-section">
   </section>
   <script type="text/javascript" src="script.js"></script>
 </body>
