Add bookmark counters

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <form>
       <input class="user-form-input user-website-input user-form" type="text" aria-label="" placeholder="Website Title">
       <input class="user-form-input user-url-input user-form" type="text" aria-label="" placeholder="Website URL">
-      <input class="user-form-input user-form enter-button" type="button" aria-label="" value="Enter">
+      <input class="user-form-input user-form enter-button" type="button" aria-label="" value="Enter" disbled="true">
     </form>
   </section>
   <section class="display-bookmark-area card-section">
+    <p class="total-bookmarks"></p>
+    <p class="read-bookmarks"></p>
+    <p class="unread-bookmarks"></p>
   </section>
   <script type="text/javascript" src="script.js"></script>
 </body>
